--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ kiwisolver==1.4.4
 MarkupSafe==2.1.3
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
+mpld3==0.5.9
 nest-asyncio==1.5.7
 numpy==1.24.4
 packaging==23.1
