--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ debugpy==1.6.7
 decorator==5.1.1
 executing==1.2.0
 Flask==2.3.2
+flask-sqlalchemy==3.0.5
 fonttools==4.42.0
+greenlet==2.0.2
 importlib-metadata==6.8.0
 importlib-resources==6.0.0
 ipykernel==6.25.0
@@ -35,15 +37,18 @@ Pillow==10.0.0
 platformdirs==3.10.0
 prompt-toolkit==3.0.39
 psutil==5.9.5
+psycopg2==2.9.7
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.15.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pyzmq==25.1.0
 scikit-learn==1.3.0
 scipy==1.10.1
 six==1.16.0
+SQLAlchemy==2.0.19
 stack-data==0.6.2
 threadpoolctl==3.2.0
 tornado==6.3.2
