--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.11.2
 asttokens==2.2.1
 backcall==0.2.0
 blinker==1.6.2
@@ -9,6 +10,7 @@ debugpy==1.6.7
 decorator==5.1.1
 executing==1.2.0
 Flask==2.3.2
+Flask-Migrate==4.0.4
 flask-sqlalchemy==3.0.5
 fonttools==4.42.0
 greenlet==2.0.2
@@ -23,6 +25,7 @@ joblib==1.3.1
 jupyter-client==8.3.0
 jupyter-core==5.3.1
 kiwisolver==1.4.4
+Mako==1.2.4
 MarkupSafe==2.1.3
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
